@@ -7,6 +7,7 @@ Changes to version 6.0.2 (since 6.0.1):
   - Language: translation updates
 * map
   - Waypoints: more reliable waypoint decluttering
+  - Topology: fix rendering bug
 * data files
   - Fixed potential crash while reading airfields files
 
